Adding support for XML output